--- a/calc/exp/css/app.css
+++ b/calc/exp/css/app.css
@@ -211,33 +211,6 @@ input::placeholder{
   opacity: 0;
 }
 
-#helpswipe{
-  display: grid;
-  animation: helpgone 1s cubic-bezier(0.4, 0, 1, 1) 1s forwards;
-  grid-area: main;
-  font-size: 1.5rem;
-  text-align: center;
-  color: white;
-  width: 100vw;
-  height: 100vh;
-  background-color: #000000dd;
-  justify-content: center;
-  align-content: center;
-  justify-items: center;
-  pointer-events: none;
-  z-index: 3;
-}
-
-#helpswipe>div{
-  width: 10rem;
-}
-
-#helpswipe>p {
-  font-size: 3rem;
-  animation: swipeleft 1s ease-in-out 0s 6 alternate;
-  filter: drop-shadow(1px 3px 2px black);
-}
-
 #timeline {
   z-index: 1;
   display: none;
@@ -253,20 +226,17 @@ input::placeholder{
   grid-template-rows: 1fr;
 }
 
-#timeline>div:first-child{
-  display: none;
+#timeline>.voce{
+  border-bottom: 3px solid red;
+  color: red;
+  text-align: center;
 }
 
 .expandir{pointer-events:none;}
 
 .fato{
-  color: #111;
   grid-area: fato;
   position: relative;
-}
-
-.fato:hover{
-  background-color: #11111150;
 }
 
 .fato.quando{
@@ -276,22 +246,20 @@ input::placeholder{
   font-size: clamp(1rem, 5vw + 0.2rem, 2.5rem);
   right: 4rem;
   right: clamp(4rem, 10vw + 1rem, 7rem);
-  top: clamp(1rem, 3vw, 3.5rem);
-}
-
-#timeline>div:last-child>span:first-child{
-  visibility: hidden;
+  top: 2rem;
+  top: clamp(1rem, 3vw, 2rem);
 }
 
 .fato.que{
-  padding: 0.5rem;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
+  position: absolute;
+  padding: 0.25rem;
 }
 
 #grafico>div{
   display: flex;
   width: 60vw;
-  height: 300vh;
+  height: 200vh;
   grid-area: grafico;
   position: relative;
   scroll-snap-align: center;
@@ -318,42 +286,23 @@ input::placeholder{
   padding-right: 2vh;
   padding-top: 1vh;
   transition: all 500ms ease-in-out 0s;
-  height: calc(attr(data-fim) - attr(data-inicio));
+  height: var(--altura);
 }
 
 #geracoes>div::before {
   content: attr(data-inicio);
   position: absolute;
-  left: -25%;
   text-align: left;
+  left: -25%;
   width: 125%;
   color: #aaa;
   border-top: 3px solid #00000030;
-  background-color: transparent !important;
-  font-weight: bold;
   letter-spacing: 0.1rem;
-  right: min(3rem,5rem);
   font-size: 2rem;
 }
 
-#geracoes>div::after {
-  content: attr(data-fim);
-  position: absolute;
-  letter-spacing: 0.6vmin;
-  left: -25%;
-  text-align: left;
-  width: 125%;
-  color: #aaa;
-  border-bottom: 3px solid #00000030;
-  font-size: min(3rem,5rem);
-  background-color: transparent !important;
-  bottom: 0px;
-  opacity: 0;
-}
-
 #geracoes>div.mostrar{
-  background: #ffbf0025;
-  color: black;
+  background: #00000025;
   font-weight: bold;
   cursor: pointer;
 }
@@ -361,21 +310,21 @@ input::placeholder{
 #geracoes>div.mostrar::before{
   color: black;
   border-block-color: #00000050;
-  background-color: transparent !important;
 }
 
-#geracoes>div.mostrar.expandir::after {
-  color: black;
-  border-bottom: 3px solid #00000050;
-  background-color: transparent !important;
-  opacity: 1;
+#geracoes>div.mostrar.expandir::before {
+  display: none;
+}
+
+#geracoes>div.mostrar.expandir {
+  background: #00000000;
+  justify-items: center;
 }
 
 .nomegeracao{
   z-index: 3;
   color: #aaa;
-  font-size: 1.2rem;
-  font-size: clamp(1rem, 5vw + 0.2rem, 3rem);
+  font-size: 1.5rem;
   display: contents;
 }
 
@@ -397,7 +346,7 @@ input::placeholder{
 }
 
 #linhaNasc::before{
-  content: "NASCIMENTO";
+  content: "Você";
   text-align: left;
   font-size: clamp(0.75rem, 1vmin + 2vmax, 2rem);
   color: orangered;
@@ -419,10 +368,6 @@ input::placeholder{
   height: 0;
   opacity: 0;
   width: 0;
-}
-
-#marcadores>div.expandir{
-  opacity: 0.25;
 }
 
 #card-i{
@@ -476,26 +421,10 @@ input::placeholder{
   align-content: center;
 }
 
-@media (min-width: 1025px) {
-  #linhaNasc{
-    font-size: clamp(3rem, 3vw + 3rem, 6rem);
-    line-height: 0.9;
-  }
-
-  #linhaNasc::before{
-    font-size: clamp(1.5rem, 1vw + 0.5rem, 2rem);
-  }
-
-  #geracoes>div::before, #geracoes>div::after {
-    font-size: clamp(1rem, 5vh + 1rem, 3rem);
-}
-}
-
 @media (orientation: landscape) {
 
   #titulo {
   grid-template-columns: 1fr 1fr;
-  display: grid;
   align-items: center;
   }
 
