--- a/mapa/v2/style.css
+++ b/mapa/v2/style.css
@@ -48,7 +48,9 @@ main{
 
 h1{
     font-size: 1rem;
-    font-size: clamp(1.75rem, 5vmin + 0.2rem, 5rem);
+    font-size: clamp(1rem, 6vmin + 0.2rem, 8rem);
+    width: 50vw;
+    line-height: 1;
 }
 
 h2{
@@ -109,26 +111,27 @@ h2{
         display: grid;
         justify-content: center;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
     }
 
     #mapa > svg{
         width: 100vw;
-        grid-area: 2 / 1 / 5 / 2;
+        grid-area: 2 / 1 / 3 / 2;
     }
 
     #dados,#titulo{
         display: grid;
         font-size: 1.2rem;
         width: 100vw;
+        justify-items: center;
         justify-content: center;
         align-items: start;
         margin: 0;
-        padding: 2vh;
+        padding: 1vh;
     }
 
     #dados{
-        grid-area: 1 / 1 / 3 / 2;
+        grid-area: 1 / 1 / 2 / 2;
         place-self: start;
         margin-top: 5vh;
     }
