--- a/mapa/v2/style.css
+++ b/mapa/v2/style.css
@@ -30,8 +30,8 @@ html, body{
 
 main{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr; 
-    grid-template-rows: 1fr 1fr 1fr; 
+    grid-template-columns: 50px 1fr 1fr 1fr 1fr 50px;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     align-items: center;
     justify-items: center;
 }
@@ -39,8 +39,7 @@ main{
 #titulo{
     z-index: 1;
     pointer-events: none;
-    grid-area: 1 / 2 / 2 / 4;
-    text-align: center;
+    grid-area: 1 / 2 / 3 / 2;
     color: white;
     line-height: 1.5;
     filter: drop-shadow(3px 3px 1px #000000);
@@ -49,13 +48,16 @@ main{
 h1{
     font-size: 1rem;
     font-size: clamp(1rem, 6vmin + 0.2rem, 8rem);
-    width: 50vw;
     line-height: 1;
 }
 
 h2{
     font-size: 0.75rem;
-    font-size: clamp(0.75rem, 5vmin + 0.1rem, 1rem);
+    font-size: clamp(0.5rem, 5vmin + 0.1rem, 1rem);
+}
+
+h1,h2{
+    margin: 0;
 }
 
 #dados{
@@ -64,16 +66,15 @@ h2{
     font-size: 1.2rem;
     font-weight: bold;
     display: grid;
-    grid-area: 2 / 2 / 3 / 4;
+    grid-area: 3 / 2 / 5 / 4;
     filter: drop-shadow(3px 3px 1px #000000);
     font-size: clamp(0.9rem, 3vmin + 0.2rem, 2rem);
-    width: 30vw;
-    text-align: center;
+    place-self: start;
 }
 
 #mapa-container{
     z-index: 0;
-    grid-area: 1 / 1 / 3 / 3;;
+    grid-area: 1 / 3 / 5 / 5;
     grid-template-columns: 1fr;
 }
 
@@ -83,7 +84,7 @@ h2{
 }
 
 #mapa > svg{
-    height: 100vh;
+    height: 90vh;
     overflow: visible;
 }
 
@@ -106,36 +107,37 @@ h2{
 }
 
 @media (orientation: portrait) {
+    
     main{
         display: grid;
         justify-content: center;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 25px 1fr 25px;
+        grid-template-rows: 25px 1fr 1fr 1fr 1fr;
     }
 
     #mapa > svg{
         width: 100vw;
-        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    #mapa-container{
+        z-index: 0;
+        grid-area: 2 / 2 / 5 / 4;
+        width: 45vw;
+        margin-left: -45vw;
     }
 
     #dados,#titulo{
         display: grid;
         font-size: 1.2rem;
-        width: 100vw;
-        justify-items: center;
+        /* justify-items: center; */
         justify-content: center;
-        align-items: start;
-        margin: 0;
-        padding: 1vh;
     }
 
     #dados{
-        grid-area: 1 / 1 / 2 / 2;
-        place-self: start;
-        margin-top: 5vh;
+        grid-area: 2 / 2 / 3 / 3;
     }
 
     #titulo{
-        grid-area: 1 / 1 / 4 / 2;
+        grid-area: 4 / 2 / 4 / 3;
     }
 }
