--- a/mapa/v2/style.css
+++ b/mapa/v2/style.css
@@ -5,14 +5,14 @@ html, body{
     height: 100vh;
     margin: 0;
     color: white;
-    background-image: linear-gradient(-45deg, cyan 5%, darkblue 25%, #852500 75%, yellow 95%);
+    background-image: linear-gradient(-90deg, cyan 5%, darkblue 40%, #852500 80%, yellow 100%);
     background-size: 300% 300%;
     font-family: 'Poppins', Helvetica, sans-serif;
     display: grid;
     overflow: hidden;
     grid-template-columns: 2vw 1fr 2vw;
     grid-template-rows: 1fr;
-    animation: moveBg 30s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+    animation: moveBg 60s cubic-bezier(0.4, 0, 0.2, 1) infinite;
 }
 
 @keyframes moveBg {
@@ -155,7 +155,7 @@ h1,h2{
         display: grid;
         justify-content: center;
         grid-template-columns: 2vw 1fr 2vw;
-        grid-template-rows: 25px 1fr 1fr 1fr 1fr;
+        grid-template-rows: 5% repeat(9,10%) 5%; 
     }
 
     #mapa > svg{
@@ -164,7 +164,7 @@ h1,h2{
 
     #mapa-container{
         z-index: 0;
-        grid-area: 2 / 2 / 5 / 4;
+        grid-area: 3 / 2 / 8 / 4;
         width: 50vw;
         margin-left: -50vw;
     }
@@ -173,22 +173,18 @@ h1,h2{
         display: grid;
         font-size: 0.75rem !important;
         justify-content: center;
-        grid-area: 4 / 2 / 4 / 3;
+        grid-area: 8 / 2 / 9 / 3;
     }
 
     #dados{
         align-items: center;
         width: 100%;
         z-index: 1;
-        pointer-events: none;
-        font-weight: bold;
-        display: grid;
-        grid-area: 1 / 2 / 5 / 3;
+        grid-area: 3 / 2 / 9 / 3;
         filter: drop-shadow(3px 3px 1px #000000);
         font-size: clamp(0.9rem, 3vmin + 0.2rem, 2rem);
         grid-template-columns: repeat(4, 25%);
         grid-template-rows: repeat(8, 12.5%);
-        place-self: center;
     }
     
     .uf{grid-area: 1 / 1 / 2 / 3;font-size: 3rem;text-align: center;}
@@ -196,12 +192,12 @@ h1,h2{
     .estadoct{font-size: 0.75rem; grid-area: 2 / 1 / 3 / 3;text-align: center;}
     
     .pop{
-        grid-area: 5 / 1 / 6 / 3;
+        grid-area: 4 / 1 / 5 / 3;
         
     }
     .poptxt{font-size: 0.9rem;}
     
-    .cp100{grid-area: 6 / 1 / 7 / 3;}
+    .cp100{grid-area: 5 / 1 / 6 / 3;}
     
     .iv{
         grid-area: 1 / 3 / 3 / 5;
