--- a/mapa/v2/style.css
+++ b/mapa/v2/style.css
@@ -7,6 +7,7 @@ html, body{
     color: white;
     background-image: linear-gradient(115deg, #FF0018 0%, #FFA52C 20%, #b8b800 40%, #00961c 60%, #030354 80%, #8e0185 100%);
     font-family: 'Poppins', Helvetica, sans-serif;
+    font-weight: bold;
     display: grid;
     overflow: hidden;
     grid-template-columns: 2vw 1fr 2vw;
@@ -46,16 +47,20 @@ main{
     pointer-events: none;
     grid-area: 1 / 3 / 2 / 5;
     color: white;
-    font-size: 2rem;
-    line-height: 1.5;
     filter: drop-shadow(2px 2px 1px #000000);
-    text-align: center;
+    text-align: right;
     animation: fadeIn 4s ease-in 0s 1 forwards;
+    width: 500px;
+    justify-self: end;
+}
+
+h1{
+    font-size: 3rem;
 }
 
 h2{
-    font-size: 0.5rem;
-    font-size: clamp(0.5rem, 3vmin + 0.1rem, 1rem);
+    font-size: 1rem;
+    line-height: 1.2;
 }
 
 #dados{
@@ -64,17 +69,19 @@ h2{
     height: 90vh;
     z-index: 1;
     pointer-events: none;
-    font-weight: bold;
     display: grid;
     grid-area: 1 / 1 / 5 / 2;
     filter: drop-shadow(2px 2px 1px #000000);
-    font-size: clamp(0.9rem, 3vmin + 0.2rem, 2rem);
+    font-size: 1.2rem;
+    font-size: clamp(0.9rem, 3vw + 0.2rem, 2rem);
     grid-template-columns: repeat(4, 25%);
     grid-template-rows: repeat(8, 12.5%);
     place-self: center;
 }
 
-.uf{grid-area: 1 / 1 / 2 / 3;font-size: 4rem;text-align: center;}
+.uf{grid-area: 1 / 1 / 2 / 3;
+    font-size: 4rem;
+    text-align: center;}
 
 .cp100{grid-area: 4 / 1 / 5 / 5;}
 
@@ -82,10 +89,17 @@ h2{
 .estadoct{grid-area: 5 / 1 / 6 / 5;}
 
 .pop{
-    grid-area: 6 / 1 / 7 / 5;
-    
+    grid-area: 7 / 1 / 8 / 5;
+    place-self: start;    
 }
+
 .poptxt{font-size: 1rem;}
+
+.genero{
+    grid-area: 6 / 1 / 7 / 5;
+    font-size: 1.3rem;
+    place-self: start;
+}
 
 .iv{
     grid-area: 2 / 1 / 4 / 3;
@@ -95,7 +109,9 @@ h2{
     grid-template-rows: repeat(2, 1fr);
     justify-items: center;
     align-items: center;
-    height: 100%;
+    height: 160px;
+    width: 180px;
+    background-color: #FFFFFF25;
     animation: fadeIn 4s ease-in 0s 1 forwards;
 }
 
@@ -144,8 +160,8 @@ h2{
 @media (orientation: portrait), (max-width:1200px) {
     
     main{
-        grid-template-columns: 5vw 1fr 5vw;
-        grid-template-rows: repeat(10,10%);
+        grid-template-columns: 3vw repeat(3, 1fr) 5vw;
+        grid-template-rows: 5vh repeat(10,10%)
     }
 
     #mapa > svg{
@@ -154,20 +170,21 @@ h2{
 
     #mapa-container{
         z-index: 0;
-        grid-area: 3 / 2 / 8 / 4;
+        grid-area: 3 / 2 / 8 / 5;
         width: 50vw;
         margin-left: -50vw;
     }
 
     #titulo{
-        font-size: 1.2rem;
-        line-height: 1.25;
-        justify-content: center;
-        grid-area: 8 / 2 / 9 / 3;
+        font-size: 1rem;
+        line-height: 1;
+        text-align: left;
+        grid-area: 8 / 2 / 9 / 4;
+        width: 350px;
     }
 
     #dados{
-        grid-area: 5 / 2 / 7 / 3;
+        grid-area: 5 / 2 / 7 / 5;
         grid-template-columns: repeat(4, 25%);
         grid-template-rows: repeat(10, 10%);
     }
@@ -175,22 +192,25 @@ h2{
     .uf{grid-area: 1 / 1 / 2 / 3;font-size: 3rem;text-align: center;}
     
     .estadoct{font-size: 0.75rem; grid-area: 2 / 1 / 3 / 3;text-align: center;place-self: center;}
+
+    .genero{
+        grid-area: 3 / 1 / 4 / 5;
+        font-size: 0.9rem;
+        place-self: start;
+    }
     
     .pop{
-        grid-area: 5 / 1 / 6 / 3;
+        grid-area: 6 / 1 / 7 / 3;
     }
 
     .poptxt{font-size: 0.9rem;}
     
-    .cp100{grid-area: 6 / 1 / 7 / 3;}
+    .cp100{ grid-area: 5 / 1 / 6 / 3;}
     
     .iv{
         grid-area: 1 / 3 / 3 / 5;
-        height: 100%;
-        width: 100%;
-        padding: 10px;
-        justify-items: center;
-        align-items: center;
+        height: 125px;
+        width: 140px;
         place-self: end;
     }
     
