--- a/mapa/v2/style.css
+++ b/mapa/v2/style.css
@@ -1,24 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@400;700&family=Poppins:wght@400;700;900&display=swap');
 
+*{
+    box-sizing: border-box;
+}
+
 html, body{
+    margin: 0;
     width: 100vw;
     height: 100vh;
-    margin: 0;
-    color: white;
+    overflow: hidden;
     background-image: linear-gradient(115deg, #FF0018 0%, #FFA52C 20%, #b8b800 40%, #00961c 60%, #030354 80%, #8e0185 100%);
+    color: white;
     font-family: 'Poppins', Helvetica, sans-serif;
     font-weight: bold;
     display: grid;
-    overflow: hidden;
-    grid-template-columns: 2vw 1fr 2vw;
-    grid-template-rows: 1fr;
-    background-size: contain;
+    grid-template-columns: 4vw 1fr 4vw;
+    grid-template-rows: 2vw 1fr 2vw;
 }
 
-@keyframes moveBg {
-    0%{background-position:0% 25%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 25%}
+.umcinco{
+    font-size: 1.5rem;
+    font-size: clamp(1rem, 4vw + 0.2rem, 2rem);
+    line-height: 1.2;
+}
+
+.umdois{
+    font-size: 1.2rem;
+    font-size: clamp(1rem, 4vw + 0.2rem, 2rem);
+    line-height: 1.2;
 }
 
 @keyframes fadeIn {
@@ -26,121 +35,31 @@ html, body{
     100%{opacity: 1;}
 }
 
-*{
-    box-sizing: border-box;
-    margin: 0;
+#mapa{
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
 }
 
 main{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5,1fr);
-    align-items: center;
-    grid-area: 1 / 2 / 2 / 3;
-    width: 100%;
-    justify-items: center;
-    margin: 0 auto;
+    grid-template-columns: repeat(10, 10%);
+    grid-template-rows: repeat(10, 10%);
+    grid-area: 2 / 2 / 3 / 3;
 }
 
-#titulo{
-    z-index: 1;
-    pointer-events: none;
-    grid-area: 1 / 3 / 2 / 5;
-    color: white;
-    filter: drop-shadow(2px 2px 1px #000000);
-    text-align: right;
-    animation: fadeIn 4s ease-in 0s 1 forwards;
-    width: 500px;
-    justify-self: end;
-}
-
-h1{
-    font-size: 3rem;
-}
-
-h2{
-    font-size: 1rem;
-    line-height: 1.2;
-}
-
-#dados{
-    align-items: end;
-    width: 100%;
-    height: 90vh;
-    z-index: 1;
-    pointer-events: none;
+main > * {
     display: grid;
-    grid-area: 1 / 1 / 5 / 3;
-    filter: drop-shadow(2px 2px 1px #000000);
-    font-size: 1.2rem;
-    font-size: clamp(0.9rem, 3vw + 0.2rem, 2rem);
-    grid-template-columns: repeat(4, 25%);
-    grid-template-rows: repeat(8, 12.5%);
-    place-self: center;
-}
-
-.uf{
-    grid-area: 1 / 1 / 2 / 3;
-    font-size: 4rem;
-    place-self: center;
-}
-
-.cp100{grid-area: 6 / 1 / 7 / 5;}
-
-.estado{font-size: 1rem;}
-.estadoct{grid-area: 4 / 1 / 5 / 6;}
-
-.pop{
-    grid-area: 7 / 1 / 8 / 5;
-    place-self: start;  
-    font-size: 0.75rem;  
-}
-
-.poptxt{font-size: 1rem;}
-
-.genero{
-    grid-area: 5 / 1 / 6 / 5;
-    font-size: 1.3rem;
-    place-self: start;
-}
-
-.iv{
-    grid-area: 2 / 1 / 4 / 3;
-    border: 1px solid white;
-    border-radius: 20px;
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    justify-items: center;
-    align-items: center;
-    height: 160px;
-    width: 180px;
-    background-color: #00000020;
-    animation: fadeIn 4s ease-in 0s 1 forwards;
-    place-self: center;
-}
-
-.inum{font-size: 4rem;}
-.itxt{font-size: 1.2rem;text-align: center;}
-
-.cptxt{font-size: 1rem;}
-
-#mapa-container{
-    z-index: 0;
-    grid-area: 1 / 1 / 5 / 6;
-    grid-template-columns: 1fr;
-    place-self: center;
-}
-
-#mapa {
-    height: 100vh;
-    display: grid;
-    align-content: center;
+    grid-area: 1 / 1 / 11 / 11;
+    grid-template-columns: repeat(10, 10%);
+    grid-template-rows: repeat(10, 10%);
 }
 
 #mapa > svg{
+    grid-area: 1 / 1 / 2 / 2;
     height: 95vh;
     overflow: visible;
     animation: fadeIn 4s ease-in 0s 1 forwards;
+    justify-self: center;
 }
 
 #mapa > svg path{
@@ -157,70 +76,133 @@ h2{
     fill-opacity: 1;
     stroke: rgb(100, 30, 0);
     stroke-width: 1000;
-    z-index: 3;
     transform: scale(1.2);
 }
 
+#titulo{
+    pointer-events: none;
+    filter: drop-shadow(2px 2px 1px #00000050);
+    animation: fadeIn 4s ease-in 0s 1 forwards;
+}
+
+h1{
+    font-size: 4rem;
+    line-height: 0;
+    grid-area: 1 / 8 / 3 / 11;
+    text-align: right;
+}
+
+h2{
+    font-size: 1.2rem;
+    font-size: clamp(1rem, 4vw + 0.2rem, 1.5rem);
+    line-height: 1;
+    grid-area: 2 / 7 / 3 / 11;
+    text-align: right;
+}
+
+#titulo>div{
+    font-weight: normal;
+    font-size: 1rem;
+    grid-area: 7 / 8 / 11 / 11;
+    text-align: right;
+}
+
+#titulo>div>p:nth-child(2){
+    font-size: 0.75rem;
+}
+
+#cursor:before{
+    content: "Posicione o mouse";
+}
+
+#dados{
+    pointer-events: none;
+    filter: drop-shadow(2px 2px 1px #00000050);
+    font-size: 1.2rem;
+    font-size: clamp(0.9rem, 3vw + 0.2rem, 2rem);
+    transform-style: preserve-3d;
+}
+
+.uf{
+    grid-area: 2 / 1 / 3 / 3;
+    font-size: 4rem;
+}
+
+.cp100{grid-area: 5 / 1 / 6 / 5;}
+
+.estadoct{grid-area: 3 / 1 / 4 / 6;}
+
+.pop{
+    grid-area: 6 / 1 / 7 / 5;
+    font-size: 0.75rem;  
+}
+
+.poptxt{font-size: 1rem;}
+
+.genero{
+    grid-area: 4 / 1 / 5 / 5;
+    font-size: 1.3rem;
+}
+
+.cptxt{font-size: 1rem;}
+
 @media (orientation: portrait), (max-width:1200px) {
-    
+
     main{
-        grid-template-columns: 3vw repeat(3, 1fr) 5vw;
-        grid-template-rows: 5vh repeat(10,10%)
+        grid-template-columns: 92vw;
     }
 
+    main>*{
+        grid-area: 1 / 1 / 11 / 2;
+    }
+    
     #mapa > svg{
-        width: 110vw;
-    }
-
-    #mapa-container{
-        z-index: 0;
-        grid-area: 3 / 2 / 8 / 5;
-        width: 50vw;
-        margin-left: -50vw;
+        width: 105vw;
     }
 
     #titulo{
-        font-size: 1rem;
-        line-height: 1;
         text-align: left;
-        grid-area: 8 / 2 / 9 / 4;
-        width: 350px;
     }
 
-    #dados{
-        grid-area: 5 / 2 / 7 / 5;
-        grid-template-columns: repeat(4, 25%);
-        grid-template-rows: repeat(10, 10%);
+    h1{
+        display: none;
+        grid-area: 1 / 1 / 11 / 11;
+        font-size: 2rem;
+        line-height: 0;
     }
     
-    .uf{grid-area: 1 / 1 / 2 / 3;font-size: 3rem;text-align: center;}
-    
-    .estadoct{font-size: 0.75rem; grid-area: 2 / 1 / 3 / 3;text-align: center;place-self: center;}
+    h2{
+        grid-area: 3 / 1 / 4 / 11;
+        font-size: 0.8rem;
+        font-weight: normal;
+        text-align: center;
+    }    
 
-    .genero{
-        grid-area: 3 / 1 / 4 / 5;
-        font-size: 0.9rem;
-        place-self: start;
+    #titulo>div{
+        display: none;
+        font-size: 0.75rem;
+        grid-area: 1 / 1 / 2 / 2;
     }
     
-    .pop{
-        grid-area: 6 / 1 / 7 / 3;
+    #titulo>div>p:nth-child(2){
+        
     }
+    
+    #cursor:before{content: "Toque";}
+    
+    #dados{align-items: center;}
 
-    .poptxt{font-size: 0.9rem;}
+    #dados>*{grid-column: 1 / 11;;}
+   
+    .uf{grid-row: 1 / 1;text-align: right;}
     
-    .cp100{ grid-area: 5 / 1 / 6 / 3;}
-    
-    .iv{
-        grid-area: 1 / 3 / 3 / 5;
-        height: 125px;
-        width: 140px;
-        place-self: end;
-    }
-    
-    .inum{font-size: 3rem;}
-    .itxt{font-size: 0.7rem;;text-align: center;}
-    
-    .cptxt{font-size: 0.75rem;}
+    .estadoct{grid-row: 1 / 1;}
+
+    .genero{grid-row: 2 / 3;text-align: center;}
+          
+    .cp100{grid-row: 6 / 7;align-self: start;}
+    .cptxt{font-size: 0.6rem;}
+
+    .pop{grid-row: 5 / 6;align-self: end;font-size: 0.75rem;font-weight: normal;}
 
 }
